# LIMAMD

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dev_install.sh  install.sh  license.md  notes.md  selftest.sh
code/: CMakeLists.txt  copyToUserProgram.sh  recompile.sh
code/LIMA_APP/: CMakeLists.txt  autorecompile.h  lima.cpp  mdrun.h  membranebuilder.h
code/LIMA_BASE/: CMakeLists.txt
code/LIMA_BASE/include/: Bodies.cuh  CommandlineUtils.h  Constants.h  DefaultUserConstants.h  EngineCore.h  Filehandling.h  Forcefield.cuh  LimaScaleSystem.cuh  LimaTypes.cuh  MDFiles.h  MoleculeGraph.h  Printer.h  Simulation.cuh  UserConstants.h  Utilities.h
code/LIMA_BASE/src/: Bodies.cu  BoundaryConditionPublic.cpp  Filehandling.cpp  Forcefield.cpp  Forcefield.cu  LimaTypes.cpp  MDFiles.cpp  MoleculeGraph.cpp  Printer.cpp  Simulation.cpp  Simulation.cu  TrrFileInterface.cpp  utilities.cpp
code/LIMA_ENGINE/: CMakeLists.txt
code/LIMA_ENGINE/include/: .Neighborlists.cuh.kate-swp  BoundaryConditionPublic.h  Engine.cuh  EngineConstants.cuh  EngineUtils.cuh  EngineUtilsWarnings.cuh  ForceComputations.cuh  Neighborlists.cuh
code/LIMA_ENGINE/src/: BoundaryCondition.cuh  Engine.cu  EngineBodies.cuh  EngineKernels.cu  EngineMain.cpp  EngineMain.cu  EngineUtils.cu  ForceComputations.cuh  KernelWarnings.cuh  Neighborlists.cu  Neighborlists.cuh  SimulationDevice.cuh  SupernaturalForces.cuh  Thermostat.cu
code/LIMA_FORCEFIELDMAKER/: CMakeLists.txt
code/LIMA_FORCEFIELDMAKER/include/: ForcefieldMaker.h  ForcefieldTypes.h
code/LIMA_FORCEFIELDMAKER/src/: ForcefieldTypes.cpp  LIMA_ForcefieldMaker.cpp  Main.cpp
code/LIMA_MD/: CMakeLists.txt
code/LIMA_MD/include/: Analyzer.cuh  BoxBuilder.cuh  CompoundBuilder.h  Environment.h  Interface.h  Rasterizer.cuh  VirtualPathMaker.h
code/LIMA_MD/src/: Analyzer.cu  BoxBuilder.cpp  BoxBuilder.cu  ChemfilesInterface.cpp  ChemfilesInterface.h  CompoundBuilder.cpp  DisplayV2.cpp  DisplayV2.h  Environment.cpp  Interface.cpp  Main.cpp  Rasterizer.cu
code/LIMA_SERVER/: BuildMembrane.h  CMakeLists.txt  lima.cpp  mdrun.cpp  mdrun.h
code/LIMA_TESTS/: CMakeLists.txt
code/LIMA_TESTS/src/: EnergyMinimization.cuh  ForceCorrectness.h  MDStability.cuh  MembraneBuilder.h  MinorPrograms.h  TestUtils.h  main.cpp
code/LIMA_TOOLS/: CMakeLists.txt
code/LIMA_TOOLS/include/: CompoundBuilder.h  SimulationBuilder.h
code/LIMA_TOOLS/src/: CompoundBuilder.cpp  SimulationBuilder.cpp  VirtualPathMaker.cpp
code/LIMA_UNITTESTS/: .runsettings  catch2main.cpp
code/obsolete/: ForcefieldMerger.cpp  ForcefieldMerger.h
dev/: manual.txt
resources/: logo_ascii.txt  logo_ascii_old.txt
resources/Forcefields/: lima_custom_forcefield.prm
resources/Forcefields/charm36/: LIMA_ffbonded.txt  LIMA_ffnonbonded.txt
resources/Forcefields/charm36_backup/: LIMA_ffbonded.txt  LIMA_ffnonbonded.txt
resources/Lipids/: pdb2gmx_all_dirs.sh
resources/Lipids - Copy/: pdb2gmx_all_dirs.sh
resources/Lipids - Copy/DAPC/: #topol.top.1#  DAPC.gro  DAPC.itp  topol.top
resources/Lipids - Copy/DAPCtest/: #DAPC.itp.1#  conf.gro  topol.top
resources/Lipids - Copy/DAPCtest - Copy/: DAPC.itp
resources/Lipids - Copy/DDPC/: DDPC.itp
resources/Lipids - Copy/POPC/: popc.gro
resources/Lipids - Copy/POPS/: POPS.itp
resources/Lipids - Copy/SDPC/: SDPC.itp
resources/Lipids - Copy/SIET/: SIET.itp
resources/Lipids - Copy/Slipids_2020.ff/: ffbonded.itp  ffnonbonded.itp  lipids.rtp
resources/Lipids - Copy/cholesterol/: cholesterol.itp
resources/Lipids/DAPC/: DAPC.gro  DAPC.itp  topol.top
resources/Lipids/DDPC/: DDPC.gro  DDPC.itp  posre.itp  topol.top
resources/Lipids/DLPG/: DLPG.gro  posre.itp  topol.top
resources/Lipids/DMPC/: DMPC.gro  DMPC.itp  posre.itp  topol.top
resources/Lipids/DMPG/: DMPG.gro  posre.itp  topol.top
resources/Lipids/DOPC/: DOPC.gro  DOPC.itp  posre.itp  topol.top
resources/Lipids/DOPE/: DOPE.gro  posre.itp  topol.top
resources/Lipids/DOPS/: DOPS.gro  DOPS.itp  posre.itp  topol.top
resources/Lipids/DPPG/: DPPG.gro  posre.itp  topol.top
resources/Lipids/DSPC/: DSPC.itp
resources/Lipids/DSPG/: DSPG.gro  posre.itp  topol.top
resources/Lipids/ENET/: ENET.gro  ENET.itp  posre.itp  topol.top
resources/Lipids/ENTF/: ENTF.gro  ENTF.itp  posre.itp  topol.top
resources/Lipids/ENTW/: ENTW.gro  ENTW.itp  posre.itp  topol.top
resources/Lipids/PDPC/: PDPC.itp
resources/Lipids/POPC/: POPC.itp  ffbonded.lff  ffnonbonded.lff
resources/Lipids/POPE/: POPE.gro  POPE.itp  posre.itp  topol.top
resources/Lipids/POPG/: POPG.gro  POPG.itp  posre.itp  topol.top
resources/Lipids/PiLPC/: PiLPC.itp
resources/Lipids/SAPC/: SAPC.itp
resources/Lipids/SIET/: SIET.gro  SIET.itp  posre.itp  topol.top
resources/Lipids/SITS/: SITS.gro  SITS.itp  posre.itp  topol.top
resources/Lipids/SM16/: SM16.gro  SM16.itp  posre.itp  topol.top
resources/Lipids/cholesterol/: cholesterol.gro  cholesterol.itp  posre.itp  topol.top
resources/Slipids/: Cholesterol.itp  DAPC.gro  DAPC.itp  DDPC.gro  DDPC.itp  DLPC.gro  DLPC.itp  DLPE.gro  DLPE.itp  DLPG.gro  DLPG.itp  DMPC.gro  DMPC.itp  DMPG.gro  DMPG.itp  DOPC.gro  DOPC.itp  DOPE.gro  DOPE.itp  DOPG.gro  DOPG.itp  DOPS.gro  DOPS.itp  DPPC.gro  DPPC.itp  DPPE.gro  DPPE.itp  DPPG.gro  DPPG.itp  DSPC.gro  DSPC.itp  DSPG.gro  DSPG.itp  ENTF.gro  ENTF.itp  ENTW.gro  ENTW.itp  PDPC.gro  PDPC.itp  POPC.gro  (+26 more)
resources/Slipids/broken_verified/: ENET.gro  ENET.itp
resources/forcefields/: lima_custom_forcefield.itp
resources/forcefields/Slipids_2020.ff/: lipids.rtp
resources/logo/: logoicon.rc
